--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -798,7 +798,6 @@ api-account-id=معرف حساب API
 api-endpoint=نقطة نهاية واجهة API
 api-endpoint-description=يعين نقطة نهاية لـ Computer Vision API V2 (مثل {0}). راجع {1} لمزيد من المعلومات.
 api-login-id=رمز دخول API
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=عنوان URL لواجهة برمجة التطبيقات
 api-username=معرف مستخدم API
 app-id=معرف التطبيق
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=تحق
 commerce.guest.checkout.authentication.commerce.health.status.key=مصادقة السداد مع الخروج للضيف
 common-name=الاسم الشائع
 common-styles=أنماط شائعة
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=رمز الشركة
 company-id-description=معرِّف الشركة الذي ينتمي إليه المستخدم المجهول.
 company-maximum-number-of-tags-per-asset-description=قم بتعيين أقصى عدد من العلامات التي ستتم إضافتها تلقائيًا إلى أصل فردي. قم بالتعيين إلى 0 إذا لم يكن هناك حد. يكون للقيمة المحددة لنطاق النظام الأسبقية على القيمة المحددة هنا، لذا إذا كانت هذه القيمة أكبر من القيم المحددة على مستوى نطاق النظام، فإن الحد المطبق سيكون هو الحد المحدد على مستوى نطاق النظام.
