--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -798,7 +798,6 @@ api-account-id=ID del compte de l'API
 api-endpoint=Extrem de l'API
 api-endpoint-description=Estableix l'extrem de Computer Vision API V2 (p. ex.: {0}). Vegeu {1} per obtenir més informació.
 api-login-id=ID de connexió de l'API
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=URL de l'API
 api-username=ID de l'usuari de l'API
 app-id=ID de l'aplicació
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Compro
 commerce.guest.checkout.authentication.commerce.health.status.key=Autenticació de la finalització de la compra del convidat
 common-name=Nom comú
 common-styles=Estils comuns
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Codi de l'empresa
 company-id-description=L'ID de l'empresa a la qual pertany l'usuari anònim.
 company-maximum-number-of-tags-per-asset-description=Establiu el nombre màxim d'etiquetes que s'afegiran automàticament a un sol contingut. Poseu 0 si no hi ha límit. El valor definit per a l'àmbit del sistema té prioritat sobre el que s'estableix aquí. Així doncs, si aquest valor és superior al que hi ha definit a nivell d'àmbit del sistema, el llindar que s'aplicarà serà el que s'hagi definit a nivell d'àmbit del sistema.
