--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -798,7 +798,6 @@ api-account-id=Identificador de cuenta de la API
 api-endpoint=Endpoint de la API
 api-endpoint-description=Establece el endpoint de la API de Computer Vision v2 (por ejemplo, {0}). Para obtener más información, consulte {1}.
 api-login-id=Identificador de inicio de sesión de la API
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=URL de la API
 api-username=Identificador de usuario de la API
 app-id=Identificador de aplicación
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Compru
 commerce.guest.checkout.authentication.commerce.health.status.key=Autenticación de finalización de compra de invitado
 common-name=Nombre común
 common-styles=Estilos comunes
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Código de compañía
 company-id-description=El identificador de la instancia al que pertenece el usuario anónimo.
 company-maximum-number-of-tags-per-asset-description=Defina el número máximo de etiquetas que se añadirán automáticamente a un único activo. Establezca esta opción en 0 si no hay límite. El valor definido para el ámbito del sistema tiene prioridad sobre el valor definido aquí; por lo tanto, si el valor es mayor que el definido en el nivel de ámbito del sistema, el umbral que se aplicará será el que se defina en el nivel de ámbito del sistema.
