--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -798,7 +798,6 @@ api-account-id=شناسه حساب API (Automatic Translation)
 api-endpoint=نقطه پایانی API
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=شناسه‌ی ورود API
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=آدرس اینترنتی API
 api-username=API شناسه کاربر (Automatic Translation)
 app-id=شناسه برنامه (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=برر
 commerce.guest.checkout.authentication.commerce.health.status.key=احراز هویت پرداخت مهمان (Automatic Translation)
 common-name=نام مشترک (Automatic Translation)
 common-styles=سبک های رایج (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=کد شرکت (Automatic Translation)
 company-id-description=شناسه شرکتی که کاربر ناشناس متعلق به آن است. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=تنظیم حداکثر تعداد برچسب ها که به طور خودکار به یک دارایی واحد اضافه خواهد شد. تنظیم به 0 اگر هیچ محدودیتی وجود دارد. مقدار تعریف شده برای دامنه سیستم بر مقدار تعریف شده در اینجا تقدم دارد، بنابراین اگر این مقدار بیشتر از مقداری باشد که در سطح دامنه سیستم تعریف شده است، آستانه اعمال شده همان آستانه ای خواهد بود که در سطح دامنه سیستم تعریف شده است. (Automatic Translation)
