--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -798,7 +798,6 @@ api-account-id=API-tilin ID
 api-endpoint=API-päätepisteet
 api-endpoint-description=Asettaa päätepisteen Computer Vision API V2:lle (esim. {0}). Katso lisätietoja kohdasta {1}.
 api-login-id=API-käyttäjätunnus
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL
 api-username=API-käyttäjän ID
 app-id=Sovellustunnus
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Tarkis
 commerce.guest.checkout.authentication.commerce.health.status.key=Vierailijakäyttäjän Kassan Todennus
 common-name=Yleinen Nimi
 common-styles=Yleiset Tyylit
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Yrityskoodi
 company-id-description=Yrityksen tunnus, johon anonyymi käyttäjä kuuluu.
 company-maximum-number-of-tags-per-asset-description=Aseta se tagien maksimimäärä, joka lisätään automaattisesti yksittäiseen sisältöön. Aseta arvo 0, jos rajaa ei ole. Järjestelmän näkyvyysalueella määritelty arvo ohittaa tässä määritellyn arvon, joten jos arvo on suurempi kuin järjestelmän näkyvyysalueella määritelty, niin käytettävä kynnysarvo on järjestelmän näkyvyysalueella määritelty arvo.
