--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -798,7 +798,6 @@ api-account-id=ID de compte de l'API
 api-endpoint=Point de terminaison de l'API
 api-endpoint-description=Définit le point de terminaison de l'API V2 Computer Vision (par ex. : {0}). Consultez {1} pour plus d'informations.
 api-login-id=ID de connexion API
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=URL de L'API
 api-username=ID utilisateur de l'API
 app-id=ID de l'application
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Vérif
 commerce.guest.checkout.authentication.commerce.health.status.key=Authentification pour paiement d'invité
 common-name=Nom ordinaire
 common-styles=Styles communs
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Code de l'entreprise
 company-id-description=L'ID de la société auquel l'utilisateur appartient.
 company-maximum-number-of-tags-per-asset-description=Définissez le nombre maximal de étiquettes qui seront automatiquement ajoutées à un même actif. Renseignez 0 s'il n'y a pas de limite. La valeur définie pour la portée du système a priorité sur celle définie ici. Par conséquent, si cette valeur est supérieure à celle définie au niveau de la portée du système, le seuil appliqué sera celui défini au niveau de la portée du système.
