--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -798,7 +798,6 @@ api-account-id=एपीआई खाता आईडी (Automatic Translation)
 api-endpoint=एपीआई एंडपॉइंट (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=एपीआई लॉगिन आईडी
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=एपीआई यूजर आईडी (Automatic Translation)
 app-id=ऐप आईडी (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=चे
 commerce.guest.checkout.authentication.commerce.health.status.key=अतिथि चेकआउट प्रमाणीकरण (Automatic Translation)
 common-name=आम नाम (Automatic Translation)
 common-styles=सामान्य शैलियों (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=कंपनी कोड
 company-id-description=बेनामी उपयोगकर्ता जिस कंपनी आईडी से संबंध रखता है। (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=उन टैगों की अधिकतम संख्या निर्धारित करें, जो स्वचालित रूप से किसी एकल परिसंपत्ति में जोड़े जाएंगे। अगर कोई सीमा नहीं है, तो 0 पर सेट करें। सिस्टम स्कोप के लिए परिभाषित मूल्य यहां परिभाषित एक पर पूर्वता लेता है, इसलिए यदि यह मान सिस्टम स्कोप स्तर पर परिभाषित एक से अधिक है, तो लागू थ्रेशोल्ड सिस्टम स्कोप स्तर पर परिभाषित एक होगा।
