--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -798,7 +798,6 @@ api-account-id=ID Akun API (Automatic Translation)
 api-endpoint=Titik Akhir API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=API Login ID (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=ID Pengguna API (Automatic Translation)
 app-id=ID Aplikasi (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Periks
 commerce.guest.checkout.authentication.commerce.health.status.key=Otentikasi Checkout Tamu (Automatic Translation)
 common-name=Nama Umum (Automatic Translation)
 common-styles=Gaya Umum (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Kode Perusahaan (Automatic Translation)
 company-id-description=ID perusahaan milik pengguna anonim. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Atur jumlah maksimum tag yang akan ditambahkan secara otomatis ke satu aset. Atur ke 0 jika tidak ada batasan. Nilai yang ditentukan untuk lingkup sistem lebih diutamakan daripada yang didefinisikan di sini, jadi Jika nilai ini lebih besar dari yang didefinisikan pada tingkat lingkup sistem, ambang batas yang diterapkan akan menjadi yang didefinisikan pada tingkat lingkup sistem. (Automatic Translation)
