--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -798,7 +798,6 @@ api-account-id=מזהה חשבון API (Automatic Translation)
 api-endpoint=נקודת קצה של API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=מזהה כניסה של API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=כתובת URL של ה-API
 api-username=מזהה משתמש של API (Automatic Translation)
 app-id=מזהה אפליקציה (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=בדו
 commerce.guest.checkout.authentication.commerce.health.status.key=אימות הוצאה של אורח (Automatic Translation)
 common-name=שם כללי
 common-styles=סגנונות נפוצים (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=קוד חברה (Automatic Translation)
 company-id-description=מזהה החברה אליה שייך המשתמש האנונימי.
 company-maximum-number-of-tags-per-asset-description=הגדר את המספר המרבי של תגים שיתווספו באופן אוטומטי לנכס יחיד. הגדר כ- 0 אם אין הגבלה. הערך המוגדר עבור טווח המערכת מקבל קדימות על-פני הערך המוגדר כאן, כך שאם ערך זה גדול מזה המוגדר ברמת טווח המערכת, הסף שיוחל יהיה זה המוגדר ברמת טווח המערכת. (Automatic Translation)
