--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -798,7 +798,6 @@ api-account-id=API アカウント ID
 api-endpoint=APIエンドポイント
 api-endpoint-description=Computer Vision API V2のエンドポイントを設定します（例：{0}）。詳細は{1}をご覧ください。
 api-login-id=API ログイン ID
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API の URL
 api-username=API ユーザー ID
 app-id=App ID
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=ゲス
 commerce.guest.checkout.authentication.commerce.health.status.key=ゲストのチェックアウト認証
 common-name=共通名
 common-styles=共通スタイル
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=会社コード
 company-id-description=匿名ユーザーが所属する企業のIDです。
 company-maximum-number-of-tags-per-asset-description=単一のアセットに自動追加されるタグの最大数を設定します。0に設定すると無制限となります。システムスコープに定義した値はここで定義した値に優先するため、この値がシステムスコープレベルで定義されたものよりも大きい場合、適用されるしきい値はシステムスコープレベルで定義されたものになります。
