--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -798,7 +798,6 @@ api-account-id=API 계정 ID (Automatic Translation)
 api-endpoint=API 엔드포인트 (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=API 로그인 ID (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=API 사용자 ID (Automatic Translation)
 app-id=앱 ID (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=게스
 commerce.guest.checkout.authentication.commerce.health.status.key=게스트 체크아웃 인증 (Automatic Translation)
 common-name=속칭 (Automatic Translation)
 common-styles=공통 스타일 (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=회사 코드 (Automatic Translation)
 company-id-description=익명 사용자가 속한 회사 ID입니다. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=단일 자산에 자동으로 추가될 최대 태그 수를 설정합니다. 제한이 없는 경우 0으로 설정합니다. 시스템 범위에 대해 정의된 값은 여기에 정의된 값보다 우선하므로 이 값이 시스템 범위 수준에서 정의된 값보다 크면 적용된 임계값은 시스템 범위 수준에서 정의된 임계값입니다. (Automatic Translation)
