--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -798,7 +798,6 @@ api-account-id=API abonemento ID (Automatic Translation)
 api-endpoint=API galinis punktas (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=API prisijungimo ID (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=API vartotojo ID (Automatic Translation)
 app-id=Programos ID (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Patikr
 commerce.guest.checkout.authentication.commerce.health.status.key=Svečio paėmimo ir išsiregistruoti autentifikavimas (Automatic Translation)
 common-name=Bendras pavadinimas (Automatic Translation)
 common-styles=Įprasti stiliai (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Įmonės kodas (Automatic Translation)
 company-id-description=Įmonės, kuriai priklauso anoniminis vartotojas, ID. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Nustatykite maksimalų žymių, kurios bus automatiškai įtrauktos į vieną turtą, skaičių. Jei nėra limito, nustatykite 0. Sistemos aprėpčiai nustatyta vertė turi viršenybę prieš čia apibrėžtą vertę, todėl, jei ši vertė yra didesnė už tą, kuri apibrėžta sistemos aprėpties lygyje, taikoma riba bus ta, kuri apibrėžta sistemos aprėpties lygiu. (Automatic Translation)
