--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -798,7 +798,6 @@ api-account-id=API-konto-ID (Automatic Translation)
 api-endpoint=API-koblingspunkt
 api-endpoint-description=Angi koblingspunkt for Computer Vision API V2 (e.g. {0}). Se {1} for mer informasjon.
 api-login-id=PÅLOGGINGS-ID for API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=BRUKER-ID for API (Automatic Translation)
 app-id=App-ID (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Sjekk 
 commerce.guest.checkout.authentication.commerce.health.status.key=Godkjenning av gjestekasse (Automatic Translation)
 common-name=Vanlig navn (Automatic Translation)
 common-styles=Vanlige stiler (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Firmakode (Automatic Translation)
 company-id-description=Firma-IDen som den anonyme brukeren tilhører. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Maksimalt antall emneord som automatisk tilordnes en enkelt ressurs. Settes til 0 for ingen begrensing i antall. Verdien definer på systemnivå får forrang over verdien som angis her. Dersom verdien her settes høyere enn verdien på systemnivå, vil det være systemnivåverdien som benyttes.
