--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -798,7 +798,6 @@ api-account-id=Identyfikator konta interfejsu API (Automatic Translation)
 api-endpoint=Punkt końcowy interfejsu API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=Identyfikator logowania interfejsu API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=Identyfikator użytkownika interfejsu API (Automatic Translation)
 app-id=Identyfikator aplikacji (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Sprawd
 commerce.guest.checkout.authentication.commerce.health.status.key=Uwierzytelnianie realizacji transakcji gościa (Automatic Translation)
 common-name=Nazwa zwyczajowa (Automatic Translation)
 common-styles=Wspólne style (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Kodeks firmy (Automatic Translation)
 company-id-description=Identyfikator firmy, do którego należy użytkownik anonimowy. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Ustaw maksymalną liczbę tagów, które zostaną automatycznie dodane do pojedynczego zasobu. Ustaw wartość 0, jeśli nie ma limitu. Wartość zdefiniowana dla zakresu systemowego ma pierwszeństwo przed wartością zdefiniowaną w tym miejscu, więc Jeśli ta wartość jest większa niż wartość zdefiniowana na poziomie zakresu systemowego, zastosowana wartość będzie wartością zdefiniowaną na poziomie zakresu systemowego. (Automatic Translation)
