--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -798,7 +798,6 @@ api-account-id=ID da conta API
 api-endpoint=Ponto de Extremidade da API
 api-endpoint-description=Define o endpoint para a API V2 do visual computacional (por exemplo, {0}). Consulte {1} para obter mais informações.
 api-login-id=ID de login da API
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=URL da API
 api-username=ID do usuário API
 app-id=ID de aplicativo
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Verifi
 commerce.guest.checkout.authentication.commerce.health.status.key=Autenticação de checkout por convidado
 common-name=Nome Comum
 common-styles=Estilo comum
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Código da empresa
 company-id-description=O company ID ao qual usuário anônimo pertence.
 company-maximum-number-of-tags-per-asset-description=Defina o número máximo de marcadores que serão adicionadas automaticamente a um único conteúdo. Defina como 0 se não houver limite. O valor definido para o escopo do sistema tem precedência sobre o aqui definido, dessa forma, se esse valor for maior que o definido no nível do escopo do sistema, o limite aplicado será o definido no nível do escopo do sistema.
