--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -798,7 +798,6 @@ api-account-id=Identifikácia konta rozhrania API (Automatic Translation)
 api-endpoint=Koncový bod rozhrania API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=Prihlasovacie ID rozhrania API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=Identifikácia používateľa rozhrania API (Automatic Translation)
 app-id=Id aplikácie (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Skontr
 commerce.guest.checkout.authentication.commerce.health.status.key=Overenie vzatím k pokladni (Automatic Translation)
 common-name=Bežný názov (Automatic Translation)
 common-styles=Bežné štýly (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Kód spoločnosti (Automatic Translation)
 company-id-description=Identifikácia spoločnosti, do ktorej patrí anonymný používateľ. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Nastavte maximálny počet značiek, ktoré sa automaticky pridajú do jedného majetku. Ak neexistuje žiadny limit, nastavte na 0. Hodnota definovaná pre rozsah systému má prednosť pred hodnotou definovanou tu, takže ak je táto hodnota väčšia ako hodnota definovaná na úrovni systémového rozsahu, použije sa prahová hodnota definovaná na úrovni systémového rozsahu. (Automatic Translation)
