--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -798,7 +798,6 @@ api-account-id=API Hesap Kimliği (Automatic Translation)
 api-endpoint=API Bitiş Noktası (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=API Oturum Açma Kimliği (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=API Kullanıcı Kimliği (Automatic Translation)
 app-id=Uygulama Kimliği (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Konuk 
 commerce.guest.checkout.authentication.commerce.health.status.key=Konuk Ödeme Kimlik Doğrulaması (Automatic Translation)
 common-name=Ortak Ad (Automatic Translation)
 common-styles=Ortak Stiller (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Şirket Kodu (Automatic Translation)
 company-id-description=Anonim kullanıcının ait olduğu şirket kimliği. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Tek bir varlığa otomatik olarak eklenecek maksimum etiket sayısını ayarlayın. Sınır yoksa 0 olarak ayarlayın. Sistem kapsamı için tanımlanan değer burada tanımlanan değerden önceliklidir, bu nedenle bu değer sistem kapsamı düzeyinde tanımlanandan büyükse, uygulanan eşik sistem kapsamı düzeyinde tanımlanan değer olacaktır. (Automatic Translation)
