--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -798,7 +798,6 @@ api-account-id=API 帐户 ID
 api-endpoint=API 端点
 api-endpoint-description=设置 Computer Vision API V2 的端点（例如 {0}）。如需了解更多信息，请参阅{1}。
 api-login-id=API 登录 ID
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL
 api-username=API 用户 ID
 app-id=应用 ID
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=检查
 commerce.guest.checkout.authentication.commerce.health.status.key=访客结账身份验证
 common-name=公用名
 common-styles=常见样式
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=公司代码
 company-id-description=匿名用户隶属的公司 ID。
 company-maximum-number-of-tags-per-asset-description=设置将自动添加到单个资产中的最大标签数。设为 0 将没有限制。为系统范围定义的值将优先于此处定义的值，因此，如果此值大于在系统范围级别定义的值，应用的阈值将是在系统范围级别定义的值。
