--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -798,7 +798,6 @@ api-account-id=API 帳戶 ID
 api-endpoint=API 端點
 api-endpoint-description=設置 Computer Vision API V2 的端點（例如 {0}）。如需瞭解更多資訊，請參閱 {1}。
 api-login-id=API 登入 ID
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL
 api-username=API 用戶 ID
 app-id=App ID
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=檢查
 commerce.guest.checkout.authentication.commerce.health.status.key=訪客結帳身分驗證
 common-name=公用名稱
 common-styles=一般樣式
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=公司代碼
 company-id-description=匿名使用者隸屬的公司 ID。
 company-maximum-number-of-tags-per-asset-description=設置將自動添加到單個資產中的最大標籤數。設為 0 將沒有限制。為系統範圍定義的值將優先于此處定義的值，因此，如果此值大於在系統範圍級別定義的值，應用的門檻值將是在系統範圍級別定義的值。
