--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -798,7 +798,6 @@ api-account-id=ИД на профил на API (Automatic Translation)
 api-endpoint=Крайна точка на API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=ИД за вход в API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=ПОТРЕБИТЕЛСКИ ИД на API (Automatic Translation)
 app-id=ИД на приложение (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Про
 commerce.guest.checkout.authentication.commerce.health.status.key=Удостоверяване на плащане от гости (Automatic Translation)
 common-name=Общо име (Automatic Translation)
 common-styles=Общи стилове (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Фирмен код (Automatic Translation)
 company-id-description=Идентификационният номер на фирмата, към който принадлежи анонимен потребител. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Задайте максималния брой етикети, които ще се добавят автоматично към един актив. Задайте на 0, ако няма ограничение. Стойността, дефинирана за обхвата на системата, има предимство пред тази, определена тук, така че ако тази стойност е по-голяма от тази, определена на ниво системен обхват, прилаганият праг ще бъде този, определен на ниво системен обхват. (Automatic Translation)
