--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -798,7 +798,6 @@ api-account-id=ID účtu rozhraní API (Automatic Translation)
 api-endpoint=Koncový bod rozhraní API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=ID přihlášení rozhraní API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=ID uživatele rozhraní API (Automatic Translation)
 app-id=ID aplikace (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Zkontr
 commerce.guest.checkout.authentication.commerce.health.status.key=Ověření pokladny hosta (Automatic Translation)
 common-name=Běžný název (Automatic Translation)
 common-styles=Běžné styly (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Kód společnosti (Automatic Translation)
 company-id-description=ID společnosti, ke kterému anonymní uživatel patří. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Nastavte maximální počet značek, které budou automaticky přidány do jednoho majetku. Pokud není k dispozici žádný limit, nastavte hodnotu 0. Hodnota definovaná pro obor systému má přednost před hodnotou definovanou zde, takže pokud je tato hodnota větší než hodnota definovaná na úrovni oboru systému, použije se prahová hodnota definovaná na úrovni oboru systému. (Automatic Translation)
