--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -798,7 +798,6 @@ api-account-id=API-konto-id (Automatic Translation)
 api-endpoint=API-slutpunkt (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=API-logon-id (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=API-bruger-id (Automatic Translation)
 app-id=App-id (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Kontro
 commerce.guest.checkout.authentication.commerce.health.status.key=Godkendelse af gæsteudtjekning (Automatic Translation)
 common-name=Almindeligt navn (Automatic Translation)
 common-styles=Almindelige typografier (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Firmakode (Automatic Translation)
 company-id-description=Det firma-id, som den anonyme bruger tilhører. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Angiv det maksimale antal mærker, der automatisk føjes til et enkelt aktiv. Angiv til 0, hvis der ikke er nogen grænse. Den værdi, der er defineret for systemomfanget, har forrang for den værdi, der er defineret her, så hvis denne værdi er større end den, der er defineret på systemområdeniveau, vil den anvendte tærskel være den, der er defineret på systemområdeniveau. (Automatic Translation)
