--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -798,7 +798,6 @@ api-account-id=API-Konto-ID
 api-endpoint=API-Endpunkt
 api-endpoint-description=Setzt den Endpunkt für die Computer Vision API V2 (z.B. {0}). Siehe {1} für weitere Informationen.
 api-login-id=API-Login-ID
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API-URL
 api-username=API-Benutzer-ID
 app-id=App-ID
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Überp
 commerce.guest.checkout.authentication.commerce.health.status.key=Gästecheckout-Authentifizierung
 common-name=Allgemeiner Name
 common-styles=Allgemeine Stile
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Unternehmenscode
 company-id-description=Die Unternehmens-ID, zu der der anonymisierte Benutzer gehört.
 company-maximum-number-of-tags-per-asset-description=Legen Sie die Maximalanzahl an Tags fest, die automatisch zu einem einzelnen Asset hinzugefügt werden. Für unbegrenzte Anzahl wählen Sie 0. Der für den Systembereich festgelegte Wert hat Vorrang über den hier verwendeten Wert; wenn dieser Wert also größer ist als der auf Systemebene, gilt als Schwelle der auf Systemebene festgelegte Wert.
