--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -798,7 +798,6 @@ api-account-id=Αναγνωριστικό λογαριασμού API (Automatic 
 api-endpoint=Τελικό σημείο API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=Αναγνωριστικό σύνδεσης API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=Αναγνωριστικό χρήστη API (Automatic Translation)
 app-id=Αναγνωριστικό εφαρμογής (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Ελέ
 commerce.guest.checkout.authentication.commerce.health.status.key=Έλεγχος ταυτότητας ολοκλήρωσης αγοράς επισκεπτών (Automatic Translation)
 common-name=Κοινό όνομα (Automatic Translation)
 common-styles=Κοινά στυλ (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Κωδικός Εταιρείας (Automatic Translation)
 company-id-description=Το αναγνωριστικό εταιρείας στο οποίο ανήκει ο ανώνυμος χρήστης. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Ορίστε τον μέγιστο αριθμό ετικετών που θα προστεθούν αυτόματα σε ένα μεμονωμένο στοιχείο. Ρυθμίστε το σε 0 εάν δεν υπάρχει όριο. Η τιμή που ορίζεται για το πεδίο εφαρμογής του συστήματος έχει προτεραιότητα έναντι της τιμής που ορίζεται εδώ, επομένως εάν αυτή η τιμή είναι μεγαλύτερη από εκείνη που ορίζεται σε επίπεδο πεδίου εφαρμογής συστήματος, το όριο που εφαρμόζεται θα είναι αυτό που ορίζεται σε επίπεδο πεδίου εφαρμογής συστήματος. (Automatic Translation)
