--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -798,7 +798,6 @@ api-account-id=API konto ID (Automatic Translation)
 api-endpoint=API lõpp-punkt (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=API sisselogimise ID (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=API kasutaja ID (Automatic Translation)
 app-id=Rakenduse ID (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Kontro
 commerce.guest.checkout.authentication.commerce.health.status.key=Külalise väljamöllimise autentimine (Automatic Translation)
 common-name=Üldnimetus (Automatic Translation)
 common-styles=Levinumad laadid (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Ettevõtte kood (Automatic Translation)
 company-id-description=Ettevõtte ID, kuhu anonüümne kasutaja kuulub. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Saate määrata ühele varale automaatselt lisatavate siltide maksimumarvu. Kui limiiti pole, seadke väärtuseks 0. Süsteemi ulatuse jaoks määratletud väärtus on ülimuslik siin määratletud väärtuse suhtes, nii et kui see väärtus on suurem kui süsteemi ulatuse tasandil määratletud väärtus, on kohaldatav lävi see, mis on määratletud süsteemi ulatuse tasandil. (Automatic Translation)
