--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -798,7 +798,6 @@ api-account-id=API Account ID (Automatic Copy)
 api-endpoint=Endpoint da API
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=API Login ID (Automatic Copy)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=URL da API
 api-username=API User ID (Automatic Copy)
 app-id=App ID (Automatic Copy)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Check 
 commerce.guest.checkout.authentication.commerce.health.status.key=Guest Checkout Authentication (Automatic Copy)
 common-name=Nome común
 common-styles=Estilos comúns
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Company Code (Automatic Copy)
 company-id-description=The company ID that the anonymous user belongs to. (Automatic Copy)
 company-maximum-number-of-tags-per-asset-description=Set the maximum number of tags that will be automatically added to a single asset. Set to 0 if there is no limit. The value defined for the system scope takes precedence over the one defined here, so If this value is greater than the one defined at system scope level, the threshold applied will be the one defined at system scope level. (Automatic Copy)
