--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -798,7 +798,6 @@ api-account-id=API Account ID (Automatic Translation)
 api-endpoint=API Endpoint (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=ID di accesso API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=ID utente API (Automatic Translation)
 app-id=App ID (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Contro
 commerce.guest.checkout.authentication.commerce.health.status.key=Autenticazione Guest Checkout
 common-name=nome comune (Automatic Translation)
 common-styles=Stili comuni (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Codice società (Automatic Translation)
 company-id-description=Il company Id a cui appartiene l'utente anonimo.
 company-maximum-number-of-tags-per-asset-description=Impostare il numero massimo di tag che verranno aggiunti automaticamente a una singola risorsa. Impostare su 0 se non è disponibile alcun limite. Il valore definito per l'ambito di sistema ha la precedenza su quello definito qui, quindi se questo valore è maggiore di quello definito a livello di ambito di sistema, la soglia applicata sarà quella definita a livello di ambito di sistema. (Automatic Translation)
