--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -798,7 +798,6 @@ api-account-id=ID Akaun API (Automatic Translation)
 api-endpoint=Titik Akhir API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=ID Log Masuk API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=ID Pengguna API (Automatic Translation)
 app-id=ID Apl (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Semak 
 commerce.guest.checkout.authentication.commerce.health.status.key=Pengesahan Pembayaran Tetamu (Automatic Translation)
 common-name=Nama Biasa (Automatic Translation)
 common-styles=Gaya Biasa (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Kod Syarikat (Automatic Translation)
 company-id-description=ID syarikat bahawa pengguna tanpa nama adalah milik. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Tetapkan bilangan maksimum tag yang akan ditambah secara automatik ke aset tunggal. Tetapkan kepada 0 jika tiada had. Nilai yang ditakrifkan untuk skop sistem mengambil keutamaan ke atas yang ditakrifkan di sini, jadi Jika nilai ini lebih besar daripada yang ditakrifkan pada tahap skop sistem, ambang yang digunakan akan menjadi yang ditakrifkan pada tahap skop sistem. (Automatic Translation)
