--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -798,7 +798,6 @@ api-account-id=Account-ID API
 api-endpoint=API-eindpunt
 api-endpoint-description=Stelt het eindpunt voor de Computer Vision API V2 (bijv. {0}). Zie {1} voor meer informatie.
 api-login-id=Login-ID API
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL
 api-username=Gebruikers-ID API
 app-id=App-ID
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Contro
 commerce.guest.checkout.authentication.commerce.health.status.key=Authenticatie voor afrekening als gast
 common-name=Algemene naam
 common-styles=Algemene stijlen
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Ondernemingscode
 company-id-description=De bedrijfs-ID waartoe de anonieme gebruiker behoort.
 company-maximum-number-of-tags-per-asset-description=Stel het maximale aantal labels in dat automatisch wordt toegevoegd aan een enkele asset. Stel dit in op 0 als er geen limiet is. De waarde die is ingesteld voor het toepassingsgebied van het systeem krijgt voorrang op de hier ingestelde waarde, dus als deze waarde groter is dan de waarde ingesteld voor het toepassingsgebied van het systeem, is de toegepaste drempelwaarde deze die werd ingesteld voor het toepassingsgebied van het systeem.
