--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -798,7 +798,6 @@ api-account-id=ID da conta API (Automatic Translation)
 api-endpoint=Ponto final da API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=API Login ID (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=ID do usuário da API (Automatic Translation)
 app-id=ID do aplicativo (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Verifi
 commerce.guest.checkout.authentication.commerce.health.status.key=Autenticação de checkout de hóspedes (Automatic Translation)
 common-name=Nome Comum (Automatic Translation)
 common-styles=Estilos Comuns (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Código da empresa (Automatic Translation)
 company-id-description=A identificação da empresa a que o usuário anônimo pertence. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Defina o número máximo de tags que serão automaticamente adicionadas a um único ativo. Definido para 0 se não houver limite. O valor definido para o escopo do sistema tem precedência sobre o definido aqui, portanto, se esse valor for maior do que o definido no nível de escopo do sistema, o limiar aplicado será o definido no nível de escopo do sistema. (Automatic Translation)
