--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -798,7 +798,6 @@ api-account-id=ID cont API (Automatic Translation)
 api-endpoint=Punct final API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=ID conectare API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=ID utilizator API (Automatic Translation)
 app-id=ID aplicație (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Verifi
 commerce.guest.checkout.authentication.commerce.health.status.key=Autentificare guest checkout (Automatic Translation)
 common-name=Nume comun (Automatic Translation)
 common-styles=Stiluri comune (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Codul companiei (Automatic Translation)
 company-id-description=ID-ul companiei din care face parte utilizatorul anonim. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Setați numărul maxim de etichete care vor fi adăugate automat la un singur activ. Setați la 0 dacă nu există nicio limită. Valoarea definită pentru domeniul de aplicare al sistemului are prioritate față de cea definită aici, astfel încât, dacă această valoare este mai mare decât cea definită la nivelul domeniului de aplicare al sistemului, pragul aplicat va fi cel definit la nivelul domeniului de aplicare al sistemului. (Automatic Translation)
