--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -798,7 +798,6 @@ api-account-id=Идентификатор учетной записи API (Autom
 api-endpoint=Конечная точка API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=Идентификатор входа API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=Идентификатор пользователя API (Automatic Translation)
 app-id=Идентификатор приложения (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Про
 commerce.guest.checkout.authentication.commerce.health.status.key=Проверка подлинности гостевого заказа (Automatic Translation)
 common-name=Общее имя (Automatic Translation)
 common-styles=Общие стили (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Код компании (Automatic Translation)
 company-id-description=Идентификатор компании, к которой принадлежит анонимный пользователь. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Установите максимальное количество тегов, которые будут автоматически добавлены в один актив. Установите до 0, если нет предела. Значение, определяемое для области системы, имеет приоритет над определенным здесь значением, поэтому, если это значение больше значения, определенного на уровне системного охвата, применяемый порог будет определяться на уровне сферы действия системы. (Automatic Translation)
