--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -798,7 +798,6 @@ api-account-id=ID računa API (Automatic Translation)
 api-endpoint=Api končna točka (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=ID prijave API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=ID uporabnika API (Automatic Translation)
 app-id=ID aplikacije (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Prever
 commerce.guest.checkout.authentication.commerce.health.status.key=Preverjanje pristnosti odjav gostov (Automatic Translation)
 common-name=Skupno ime (Automatic Translation)
 common-styles=Pogosti slogi (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Šifra podjetja (Automatic Translation)
 company-id-description=ID podjetja, ki ga anonimni uporabnik pripada. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Nastavite največje število oznak, ki bodo samodejno dodane enemu sredstvom. Nastavite na 0, če ni omejitve. Vrednost, opredeljena za sistemsko področje uporabe, ima prednost pred tukaj opredeljeno vrednostjo, zato če je ta vrednost večja od vrednosti, opredeljene na ravni sistemskega obsega, bo uporabljeni prag tisti, ki je določen na ravni obsega sistema. (Automatic Translation)
