--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -798,7 +798,6 @@ api-account-id=API-konto-ID
 api-endpoint=API-slutpunkt
 api-endpoint-description=Ställer in slutpunkt för Computer Vision API V2 (t.ex. {0}). Se {1} för mer information.
 api-login-id=API-inloggnings-ID
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API-URL
 api-username=API-användar-ID
 app-id=App-ID
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Kontro
 commerce.guest.checkout.authentication.commerce.health.status.key=Autentisering av gästbetalning
 common-name=Vanligt namn
 common-styles=Vanliga stilar
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Företagskod
 company-id-description=Företags-ID som den anonyma användaren tillhör.
 company-maximum-number-of-tags-per-asset-description=Ange maximalt antal taggar som automatiskt läggs till i en enskild resurs. Ange 0 om det inte finns en gräns. Värdet som anges för systemomfånget har företräde över det som anges här, så om det här värdet är större än värdet som anges på nivå för systemomfång kommer det tillämpade tröskelvärdet vara det som definieras på nivå för systemomfång.
