--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -798,7 +798,6 @@ api-account-id=รหัสบัญชี API (Automatic Translation)
 api-endpoint=API เอ็นพ้อยท์
 api-endpoint-description=กำหนดจุดสิ้นสุดสำหรับ Computer Vision API V2 (เช่น {0}) ดู {1} สำหรับข้อมูลเพิ่มเติม
 api-login-id=ID ล็อกอิน API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=รหัสผู้ใช้ API (Automatic Translation)
 app-id=รหัสแอป (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=ตร
 commerce.guest.checkout.authentication.commerce.health.status.key=การรับรองความถูกต้องของการชําระเงินของผู้เยี่ยมชม (Automatic Translation)
 common-name=ชื่อทั่วไป (Automatic Translation)
 common-styles=ลักษณะทั่วไป (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=รหัสบริษัท (Automatic Translation)
 company-id-description=รหัสบริษัทที่ผู้ใช้ที่ไม่ระบุชื่อเป็นสมาชิกอยู่ (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=ตั้งค่าจํานวนแท็กสูงสุดที่จะเพิ่มลงในเนื้อหาเดียวโดยอัตโนมัติ ตั้งค่าเป็น 0 ถ้าไม่จํากัด ค่าที่กําหนดไว้สําหรับขอบเขตของระบบจะมีความสําคัญมากกว่าค่าที่กําหนดไว้ที่นี่ ดังนั้นถ้าค่านี้มากกว่าค่าที่กําหนดไว้ที่ระดับขอบเขตของระบบ (Automatic Translation)
