--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -798,7 +798,6 @@ api-account-id=Ідентифікатор облікового запису API 
 api-endpoint=Кінцева точка API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=Ідентифікатор входу в API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=Ідентифікатор користувача API (Automatic Translation)
 app-id=Ідентифікатор застосунку (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Пер
 commerce.guest.checkout.authentication.commerce.health.status.key=Автентифікація взяття на редагування гостя (Automatic Translation)
 common-name=Загальне ім'я (Automatic Translation)
 common-styles=Загальні стилі (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Код компанії (Automatic Translation)
 company-id-description=Ідентифікатор компанії, до якої належить анонімний користувач. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Встановіть максимальну кількість тегів, які буде автоматично додано до одного активу. Встановіть значення 0, якщо немає обмежень. Значення, визначене для системної області видимості, має перевагу над визначеним тут значенням, тому якщо це значення більше, ніж значення, визначене на рівні системної області видимості, застосоване граничне значення буде визначене на рівні системної області видимості. (Automatic Translation)
