--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -798,7 +798,6 @@ api-account-id=ID tài khoản API (Automatic Translation)
 api-endpoint=Điểm cuối API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=ID đăng nhập API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=ID người dùng API (Automatic Translation)
 app-id=ID ứng dụng (Automatic Translation)
@@ -2064,6 +2063,7 @@ commerce.guest.checkout.authentication.commerce.health.status.description=Kiểm
 commerce.guest.checkout.authentication.commerce.health.status.key=Xác thực Thanh toán của Khách (Automatic Translation)
 common-name=Tên Chung (Automatic Translation)
 common-styles=Kiểu phổ biến (Automatic Translation)
+communication-with-the-api-provider-failed=Communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 company-code=Mã công ty (Automatic Translation)
 company-id-description=ID công ty mà người dùng ẩn danh thuộc về. (Automatic Translation)
 company-maximum-number-of-tags-per-asset-description=Đặt số lượng thẻ tối đa sẽ được tự động thêm vào một tài sản. Đặt thành 0 nếu không có giới hạn. Giá trị được xác định cho phạm vi hệ thống được ưu tiên hơn giá trị được xác định ở đây, vì vậy Nếu giá trị này lớn hơn giá trị được xác định ở cấp phạm vi hệ thống, ngưỡng được áp dụng sẽ là giá trị được xác định ở cấp phạm vi hệ thống. (Automatic Translation)
